# Gladiators

./: AStar.h  BackTrack.h  Backtracking.h  CMakeLists.txt  Gladiador.h  Json.h  README.md  TCPclient.h  Torre.h  Torres.h  list.cpp  list.h  main.cpp  node.cpp  node.h  tablero.h
ClienteG/src/: ClienteG.java  ConeccionC.java  ControladorTorretas.java  FileHandle.java  Gladiador.java  JSONUtils.java  RandomNameGeneratorTowers.java  Torreta.java
Gladiators/: AStar.h  BackTrack.h  BackTracking.h  Backtracking.h  CMakeLists.txt  Gladiador.h  Grid.h  Lista.h  Nodo.h  Oleada.h  Torre.h  list.cpp  list.h  main.cpp  node.cpp  node.h
Gladiators2/src/server/: ControladorGladiadores.java  ControladorTorretas.java  GladiatorServerTorretas.java  ServerDirector.java  Torreta.java
